<resources>
    <string name="app_name">202035328 남선우</string>
    <string name="mobile_programming">Mobile Progamming</string>

    <!-- course -->
    <string name="course_01">01. Introduction</string>
    <string name="course_02">02. Android Making First App</string>
    <string name="course_03">03. Views and Layouts</string>
    <string name="course_04">04. Application Basics</string>
    <string name="course_04_01">04–1. Application Basics (Intent)</string>
    <string name="course_04_02">04–2. Application Basics</string>
    <string name="course_05">05. Widgets and Event</string>
    <string name="course_05_01">05–1. Basic</string>
    <string name="course_05_02">05–2. Advanced</string>
    <string name="course_06">06. Graphics and Animation</string>
    <string name="course_07">07. Thread</string>
    <string name="course_08">08. Database</string>
    <string name="course_08_01">08–1. Data Persistency</string>
    <string name="course_08_02">08–2. SQLite (Database)</string>
    <string name="course_08_03">08–3. Data Networking</string>
    <string name="course_09">09. Multimedia \n &amp; Location based Service</string>
    <string name="course_09_01">09–1. Multimedia</string>
    <string name="course_09_02">09–2. Location Service</string>
    <string name="course_10">10. Sensors</string>

    <!-- for exercise -->
    <string name="hello_android">안녕 안드로이드!</string>
    <string name="ACME_Corp_Caption">login</string>
    <string name="Enter_your_First_and_Last_name">Enter your First and Last name</string>
    <string name="login">login</string>
    <string name="sugar">Sugar</string>
    <string name="cream">Cream</string>
    <string name="coffee_addons">What else in your coffee?</string>
    <string name="pay">Pay</string>
</resources>