<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#886495ed"
    android:orientation="vertical"
    android:padding="2dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="#ffffff00"
        android:text="@string/ACME_Corp_Caption" />

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:hint="@string/Enter_your_First_and_Last_name"
        android:textSize="18sp"
        android:inputType="textCapWords|textAutoCorrect" />

    <Button
        android:id="@+id/button1"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/login" />

</LinearLayout>