<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/course_05_subtitle_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/mobile_programming"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/course_05_title_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course_05_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_05"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/course_05_subtitle_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/course_05_01_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_course_btn"
        android:padding="10dp"
        android:text="@string/course_05_01"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/course_05_02_btn"
        app:layout_constraintStart_toStartOf="@id/course_05_title_tv"
        app:layout_constraintTop_toBottomOf="@id/course_05_title_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/course_05_02_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_course_btn"
        android:padding="10dp"
        android:text="@string/course_05_02"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/course_05_title_tv"
        app:layout_constraintTop_toBottomOf="@id/course_05_01_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>